--- a/hNext/hNext.WebClientBlazor/Shared/ValidatableFormField.razor
+++ b/hNext/hNext.WebClientBlazor/Shared/ValidatableFormField.razor
@@ -3,11 +3,11 @@
 <div class="form-group @(Wide?"row":"") @Class">
     @if (!string.IsNullOrWhiteSpace(Label))
     {
-        <div class="@(Wide?"col-lg-2":"") d-flex flex-column justify-content-lg-end align-content-start align-content-lg-end">
+        <div class="@(Wide?$"col-lg-{LabelWidth}":"") d-flex flex-column justify-content-lg-end align-content-start align-content-lg-end">
             <label for="@Id" class="col-form-label text-left @(Wide?"text-lg-right":"") font-weight-bold text-nowrap">@Label:</label>
         </div>
     }
-    <div class="@(Wide?"col-lg-10":"") d-flex flex-column px-0">
+    <div class="@(Wide?$"col-lg-{12-LabelWidth}":"") d-flex flex-column px-0">
         @ChildContent
     </div>
 </div>
