--- a/hNext/hNext.WebClientBlazor/Shared/PersonEditor.razor
+++ b/hNext/hNext.WebClientBlazor/Shared/PersonEditor.razor
@@ -18,44 +18,44 @@
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="6" Label="@Localizer[nameof(Resources.Gender)]" Id="gender">
                         <ValidationMessage For="()=>Person.GenderId" />
-                        <InputSelect @bind-Value="Person.GenderId" Class="custom-select" Id="gender">
+                        <InputSelectInt @bind-Value="Person.GenderId" Class="custom-select" Id="gender" disabled="@(!Genders.Any())">
                             <option value="0">@Localizer[nameof(Resources.SelectGender)]</option>
                             @foreach (var gender in Genders)
                             {
                                 <option value="gender.Id">@gender.Name</option>
                             }
-                        </InputSelect>
+                        </InputSelectInt>
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="6" Label="@Localizer[nameof(Resources.DateOfBirth)]" Id="dateofbirth">
                         <InputDate Class="form-control" Id="dateofbirth" @bind-Value="Person.DateOfBirth" />
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="6" Label="@Localizer[nameof(Resources.CountryOfBirth)]" Id="countryofbirth">
-                        <InputSelect @bind-Value="Person.CountryOfBirthId" Class="custom-select" Id="countryofbirth">
+                        <InputSelectInt @bind-Value="CountryOfBirthId" Class="custom-select" Id="countryofbirth" disabled="@(!Countries.Any())">
                             <option value="0">@Localizer[nameof(Resources.SelectCountry)]</option>
                             @foreach (var country in Countries)
                             {
                                 <option value="@country.Id">@country.Name</option>
                             }
-                        </InputSelect>
+                        </InputSelectInt>
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="6" Label="@Localizer[nameof(Resources.PlaceOfBirth)]" Id="placeofbirth">
-                        @if (FilteredPlacesOfBirth.Count() > 0)
+                        @if (FilteredPlacesOfBirth.Count() > 50)
                         {
                             <input type="text" @bind-value="PlaceOfBirthName" @bind-value:event="oninput" class="form-control" id="placeofbirth" />
                         }
                         else
                         {
-                            <InputSelect @bind-Value="Person.PlaceOfBirthId" Class="custom-select" Id="placeofbirth">
-                                <option value="">@Localizer[nameof(Resources.SelectCity)]</option>
+                            <InputSelectInt @bind-Value="PlaceOfBirthId" Class="custom-select" Id="placeofbirth" disabled="@(!PlacesOfBirth.Any())">
+                                <option value="0">@Localizer[nameof(Resources.SelectCity)]</option>
                                 @if (Countries.Count() > 0)
-                                    {
+                                {
                                     <option value="-1">@Localizer[nameof(Resources.ResetSearch)]</option>
-                                    }
+                                }
                                 @foreach (var city in FilteredPlacesOfBirth)
-                                    {
+                                {
                                     <option value="@city.Id" @key="city.Id">@city.Name</option>
-                                    }
-                            </InputSelect>
+                                }
+                            </InputSelectInt>
                         }
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="6" Label="@Localizer[nameof(Resources.TaxId)]" Id="taxid">
@@ -65,31 +65,31 @@
                 <div class="col-lg-6 d-flex flex-column justify-content-lg-between">
                     <ValidatableFormField Wide="@Wide" LabelWidth="4" Label="@Localizer[nameof(Resources.Country)]" Id="country">
                         <ValidationMessage For="() => Person.Address.CountryId" />
-                        <InputSelect @bind-Value="Person.Address.CountryId" Id="country" Class="custom-select">
+                        <InputSelectInt @bind-Value="CountryId" Id="country" Class="custom-select" disabled="@(!Countries.Any())">
                             <option value="0">@Localizer[nameof(Resources.SelectCountry)]</option>
                             @foreach (var country in Countries)
                             {
                                 <option value="@country.Id">@country.Name</option>
                             }
-                        </InputSelect>
+                        </InputSelectInt>
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="4" Label="@Localizer[nameof(Resources.Region)]" Id="region">
-                        <InputSelect @bind-Value="Person.Address.RegionId" Class="custom-select" Id="region">
+                        <InputSelectInt @bind-Value="RegionId" Class="custom-select" Id="region" disabled="@(!Regions.Any())">
                             <option value="0">@Localizer[nameof(Resources.SelectRegion)]</option>
                             @foreach (var region in Regions)
                             {
                                 <option value="@region.Id" @key="region.Id">@region.Name</option>
                             }
-                        </InputSelect>
+                        </InputSelectInt>
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="4" Label="@Localizer[nameof(Resources.District)]" Id="district">
-                        <InputSelect @bind-Value="Person.Address.DistrictId" Class="custom-select" Id="district">
+                        <InputSelectInt @bind-Value="DistrictId" Class="custom-select" Id="district" disabled="@(!Districts.Any())">
                             <option value="0">@Localizer[nameof(Resources.SelectDistrict)]</option>
                             @foreach (var district in Districts)
                             {
                                 <option value="@district.Id" @key="district.Id">@district.Name</option>
                             }
-                        </InputSelect>
+                        </InputSelectInt>
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="4" Label="@(Person?.Address?.City?.CityType?.Name ?? Localizer[nameof(Resources.City)])" Id="city">
                         <ValidationMessage For="()=>Person.Address.CityId" />
@@ -99,17 +99,17 @@
                         }
                         else
                         {
-                            <InputSelect @bind-Value="Person.Address.CityId" Class="custom-select" Id="city">
+                            <InputSelectInt @bind-Value="CityId" Class="custom-select" Id="city" disabled="@(!Cities.Any())">
                                 <option value="0">@Localizer[nameof(Resources.SelectCity)]</option>
                                 @if (Cities.Count() > 0)
                                     {
-                                    <option value="-1">>@Localizer[nameof(Resources.ResetSearch)]</option>
+                                    <option value="-1">@Localizer[nameof(Resources.ResetSearch)]</option>
                                     }
                                 @foreach (var city in FilteredCities)
                                     {
                                     <option value="@city.Id" @key="city.Id">@city.Name</option>
                                     }
-                            </InputSelect>
+                            </InputSelectInt>
                         }
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="4" Label="@(Person?.Address?.Street?.StreetType?.Name ?? Localizer[nameof(Resources.Street)])" Id="street">
@@ -119,17 +119,17 @@
                         }
                         else
                         {
-                            <InputSelect @bind-Value="Person.Address.StreetId" Class="custom-select" Id="street">
+                            <InputSelectInt @bind-Value="StreetId" Class="custom-select" Id="street" disabled="@(!Streets.Any())">
                                 <option value="0">@Localizer[nameof(Resources.SelectStreet)]</option>
                                 @if (Streets.Count() > 0)
                                     {
-                                    <option value="-1">>@Localizer[nameof(Resources.ResetSearch)]</option>
+                                    <option value="-1">@Localizer[nameof(Resources.ResetSearch)]</option>
                                     }
                                 @foreach (var street in FilteredStreets)
                                     {
                                     <option value="@street.Id" @key="street.Id">@street.Name</option>
                                     }
-                            </InputSelect>
+                            </InputSelectInt>
                         }
                     </ValidatableFormField>
                     <ValidatableFormField Wide="@Wide" LabelWidth="4" Label="@Localizer[nameof(Resources.Building)]" Id="building">
